# noobmux

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: noobmux-hook  release.sh
src/: colors.ts  commands.ts  contextMenu.ts  detect.test.ts  detect.ts  main.ts  prompt.ts  screenshots.ts  session.ts  settingsModal.ts  store.ts  styles.css  themes.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  claude_hooks.rs  config.rs  download.rs  hooks.rs  lib.rs  main.rs  meta.rs  pty.rs  screenshots.rs  tmux.rs
